feat: enhance Client CRUD, add Promo to Admin, add Offre management to Caisse

--- a/templates/caisse/layout.html.twig
+++ b/templates/caisse/layout.html.twig
@@ -224,6 +224,7 @@
             <a href="{{ path('app_caisse_couleur_index') }}" class="submenu-item" style="{% if app.request.get('_route') starts with 'app_caisse_couleur_' %}background-color: rgba(255,255,255,0.1); color: white;{% endif %}">Couleurs</a>
             <a href="{{ path('app_caisse_tarif_index') }}" class="submenu-item" style="{% if app.request.get('_route') starts with 'app_caisse_tarif_' %}background-color: rgba(255,255,255,0.1); color: white;{% endif %}">Tarifs</a>
             <a href="{{ path('app_caisse_code_index') }}" class="submenu-item" style="{% if app.request.get('_route') starts with 'app_caisse_code_' %}background-color: rgba(255,255,255,0.1); color: white;{% endif %}">Codes Promo</a>
+            <a href="{{ path('app_caisse_offre_index') }}" class="submenu-item" style="{% if app.request.get('_route') starts with 'app_caisse_offre_' %}background-color: rgba(255,255,255,0.1); color: white;{% endif %}">Offres</a>
             <a href="{{ path('app_caisse_carousel_index') }}" class="submenu-item" style="{% if app.request.get('_route') starts with 'app_caisse_carousel_' %}background-color: rgba(255,255,255,0.1); color: white;{% endif %}">Carousel</a>
         </div>
         
